--- a/web/styles.css
+++ b/web/styles.css
@@ -3,10 +3,15 @@
 }
 
 .token-label {
-    font-weight: bold;
+    font-variant: small-caps;
 }
 
 .token-varname {
+    font-style: italic;
+    font-weight: bold;
+}
+
+.token-boundvar {
     font-style: italic;
 }
 
@@ -16,8 +21,4 @@
 
 .token-invalid {
     color: red;
-}
-
-.token-whitespace {
-    text-decoration: underline;
 }
