--- a/web/styles.css
+++ b/web/styles.css
@@ -1,24 +1,38 @@
+.parlay {
+    background-color: var(--text-background);
+    color: var(--text-content-primary);
+}
+
 .token-absname {
-    color: lightseagreen
+    color: var(--text-accent-violet);
 }
 
 .token-label {
+    color: var(--text-content-primary);
     font-variant: small-caps;
 }
 
 .token-varname {
     font-style: italic;
-    font-weight: bold;
+    color: var(--text-accent-blue);
 }
 
 .token-boundvar {
     font-style: italic;
+    color: var(--text-accent-green);
 }
 
 .token-identifier {
-    font-style: normal;
+    font-style: italic;
+    color: var(--text-content-primary);
 }
 
 .token-invalid {
-    color: red;
+    color: var(--text-accent-red);
+}
+
+.nested-block {
+    border-left: 2px solid var(--text-background-highlights);
+    padding-left: 5px;
+    display:block;
 }
