--- a/web/styles.css
+++ b/web/styles.css
@@ -36,3 +36,9 @@
     padding-left: 5px;
     display:block;
 }
+
+.nested-entry {
+    border-top: 2px dotted var(--text-background-highlights);
+    padding-top: 5px;
+    display:block;
+}
