Testing of example 4

--- a/web/styles.css
+++ b/web/styles.css
@@ -57,4 +57,5 @@
     border-top: 2px dotted var(--text-background-highlights);
     padding-top: 5px;
     display:block;
+    color: var(--text-accent-red);
 }
