--- a/web/styles.css
+++ b/web/styles.css
@@ -54,19 +54,34 @@
     color: var(--text-accent-red);
 }
 
-
-.nested-block {
+.parlay-block {
     border-left: 2px solid var(--text-background-highlights);
-    padding-left: 5px;
+    padding-left: 0.2ch;
     margin-left: 10px;
     display:block;
 }
 
-.nested-entry {
+.parlay-indented-block {
+    border-left: 2px solid var(--text-background-highlights);
+    padding-left: 2.2ch;
+    margin-left: 10px;
+    display:block;
+}
+
+.parlay-entry {
     border-top: 2px dotted var(--text-background-highlights);
     padding-top: 5px;
     display:block;
 }
+
+.parlay-entry-row {
+    padding-left: 0.2ch;
+}
+
+.parlay-indented-entry-row {
+    padding-left: 2ch;
+}
+
 
 .nested-invalid-entry {
     /* border-top: 2px dotted var(--text-background-highlights); 
