--- a/web/styles.css
+++ b/web/styles.css
@@ -7,38 +7,55 @@
     font-style: normal;
 }
 
-.parlay-block {
+/*.parlay-block {
     border-left: 2px solid var(--text-background-highlights);
-    padding-left: 0.2ch;
-    margin-left: 10px;
+    padding-left: 0ch;
+    margin-left: 0px;
     display: block;
-}
+}*/
 
-.parlay-indented-block {
-    border-left: 2px solid var(--text-background-highlights);
-    padding-left: 2.2ch;
-    margin-left: 10px;
+.parlay-indented-block, .parlay-block {
+    border-left: 1px solid var(--text-background-highlights);
+    padding-left: 0ch;
+    margin-left: 2ch; /* 4 * (width of space) */
+    margin-top: 0.0ex;
+    margin-bottom: 0.2ex;
+    /*border-bottom: 2px solid var(--text-background-highlights);*/
     display: block;
 }
 
 .parlay-entry {
-    border-top: 2px dotted var(--text-background-highlights);
-    padding-top: 5px;
+    border-top: 1px dotted var(--text-background-highlights);
+    padding-top: 0.5ex;
+    padding-left: 0.5ch;
     display: block;
 }
 
 .parlay-entry-row {
-    padding-left: 0.2ch;
+    padding-left: 0ch;
+    margin-left: 0px;    
 }
 
 .parlay-indented-entry-row {
-    padding-left: 2ch;
+    padding-left: 0ch;
+    margin-left: 1ch; /* 2 * (width of space) */
 }
 
 
-.nested-invalid-entry {
-    /* border-top: 2px dotted var(--text-background-highlights); 
-    padding-top: 5px;*/
-    display: span;
-    color: var(--text-accent-red);
+
+/* Linear Representation Styling */
+
+.parlay-raw-entry {
+    border-top: 1px dotted var(--text-background);
+    padding-top: 5px;
+    border-left: 1px solid var(--text-background);
+    padding-left: 0.5ch;
+    margin-left: 0px;    
+    display: block;
 }
+
+.parlay-raw-entry-row {
+    padding-left: 0ch;
+    margin-left: 0px;    
+}
+
