Work on simple editor

--- a/web/index.css
+++ b/web/index.css
@@ -3,6 +3,6 @@
 @import url(solarized.css);
 @import url(tokens.css);
 @import url(ui.css);
-@import url(styles.css);
+@import url(simple_styles.css);
 
 
