--- a/web/gruvbox.css
+++ b/web/gruvbox.css
@@ -1,5 +1,13 @@
 .gruvbox-light {
 
-    gruvbox-
+    --gruvbox-bg: ;
+    --gruvbox-red: ;
+    --gruvbox-green: ;
+    --gruvbox-yellow: ;
+    --gruvbox-blue: ;
+    --gruvbox-purple: ;
+    --gruvbox-aqua: ;
+    --gruvbox-gray: ;
+
 
 }
