--- a/web/index.css
+++ b/web/index.css
@@ -3,6 +3,7 @@
 @import url(solarized.css);
 @import url(tokens.css);
 @import url(ui.css);
+@import url(colorschemes/colorschemes.css);
 @import url(simple_styles.css);
 
 
