--- a/web/colorschemes/colorschemes.css
+++ b/web/colorschemes/colorschemes.css
@@ -1,2 +1,6 @@
 @import url(gruvbox_light.css);
 @import url(gruvbox_dark.css);
+@import url(solarized_light.css);
+@import url(solarized_dark.css);
+@import url(monokai_pro.css);
+@import url(monokai_classic.css);
