--- a/web/index.css
+++ b/web/index.css
@@ -1,6 +1,6 @@
 @import url(reset.css);
 @import url(resources/fonts/fonts.css);
-@import url(solarized.css);
+/*@import url(solarized.css);*/
 @import url(tokens.css);
 @import url(ui.css);
 @import url(colorschemes/colorschemes.css);
